--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <script src="https://kit.fontawesome.com/b1022db8d9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
